@@ -28,6 +28,7 @@ $ -> Language fix or change
 31-Jul-2013 Michael Babker
  # [#31620] Some plugins cause blank pages in 3.1.4.  Thanks Don Gilbert
  # [#31607] REGRESSION: Changing the autoload order in a point release.  Thanks Don Gilbert
+ # [#31598] Fix for B/C break related to Tag saving using *old* way.  Thanks Thomas Hunziker
 
 30-Jul-2013 Jean-Marie Simonet
  # [#31609] *Regression: [#30150] prevents subcategories drilldowns
